# async_scraper_FastAPI

./: .env  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 35c0ca8a88be_migration_1.py  e8e87f893cfa_migration_1.py
async_scrap_on_fastapi/constants/: config.py  web_data.py
async_scrap_on_fastapi/db/: connection.py  models.py
async_scrap_on_fastapi/endpoints/: retrieve.py
async_scrap_on_fastapi/rabbit/: connection.py  data_item_consumer.py  data_item_publisher.py  item_links_consumer.py  item_links_publisher.py
async_scrap_on_fastapi/repositories/: consumer_database.py  retrieve.py
async_scrap_on_fastapi/repositories/services/: multifilter.py  tools.py
async_scrap_on_fastapi/schemas/: retrieve.py  retrieve_users.py
async_scrap_on_fastapi/scrap/: item_scrap.py  retry_item_scrap.py  retry_url_scrap.py  test.py  urls_scrap.py
async_scrap_on_fastapi/scrap/bs4/: complete_item_dict.py  get_phone.py  item_parse_methods.py  single_item_parse.py
async_scrap_on_fastapi/scrap/web/: retry_scrap.py  scrap_items.py  scrap_links.py
