[tool.poetry]
name = "async-scrap-on-fastapi"
version = "0.1.0"
description = ""
authors = ["zxc_322 <kvasoliaeww@gmail.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.87.0"
beautifulsoup4 = "^4.11.1"
databases = {extras = ["posgresql"], version = "^0.6.2"}
alembic = "^1.8.1"
pydantic = "^1.10.2"
uvicorn = "^0.19.0"
psycopg2-binary = "^2.9.5"
pika = "^1.3.1"
lxml = "^4.9.1"
httpx = "^0.23.1"
passlib = "^1.7.4"
asyncpg = "^0.27.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
